Modificações no big-card

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,26 @@
-<p>big-card works!</p>
+<div class="container-big-card">
+    <div class="big-card-picture">
+        <!-- <img src="https://via.placeholder.com/1201x901" width="300" height="200"> -->
+        <img src="https://www.jetbrains.com/webstorm/features/screenshots/angular-screen.png">
+    </div>
+
+    <div class="big-card-name">
+
+        <h1><a href="#">Saiu nova versão do angular</a></h1>
+
+    </div>
+    <div class="big-card-description">
+
+        <p>
+            <a href="#">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem maxime omnis iusto veniam quae
+                magni
+                quibusdam unde sequi, iure aut sit vitae, placeat libero. Corporis culpa illo ipsa accusantium eligendi!
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem maxime omnis iusto veniam quae
+                magni
+                quibusdam unde sequi, iure aut sit vitae, placeat
+            </a>
+        </p>
+
+    </div>
+</div>
