--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,11 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box ;
+    box-sizing: border-box;
     background: #141412;
     color: white;
+}
+
+a {
+    text-decoration: none;
 }
