Barra de menu e small cards finalizados

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,10 @@
-<p>menu-bar works!</p>
+<div class="containter-menu">
+    <ul>
+        <li><a href="#">Linkedin</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://github.com/Rinaldo-JR1" target="_blank">Github</a></li>
+        <li><span>•</span></li>
+        <li><a href="#">Instagram</a></li>
+        <li><span>•</span></li>
+    </ul>
+</div>
