--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,18 @@
-<p>small-card works!</p>
+<div class="containter-small-card">
+    <div class="container-small-card-content">
+        <div class="small-card-picture">
+            <img
+                src="https://legadodamarvel.com.br/wp-content/uploads/2022/11/Anuncio-a-qualquer-momento-Homem-Aranha-4-ganha-novidades-na-Sony-legadodamarvel-1024x538.webp">
+        </div>
+
+        <div class="small-card-name">
+
+            <h1><a href="#">Saiu nova versão do angular</a></h1>
+
+        </div> 
+    </div>
+
+    <div class="containter-small-card-separator">
+        <hr />
+    </div>
+</div>
