--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,7 +1,7 @@
 <div class="container-big-card">
     <div class="big-card-picture">
         <!-- <img src="https://via.placeholder.com/1201x901" width="300" height="200"> -->
-        <img src="https://www.jetbrains.com/webstorm/features/screenshots/angular-screen.png">
+        <img src="https://www.magazine-hd.com/apps/wp/wp-content/uploads/2022/09/iron-man-ea.jpg">
     </div>
 
     <div class="big-card-name">
