--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,12 @@
 .container-articles{
     margin-top: 35px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+header{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
 }
