Paginas foram dinamizadas

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,25 @@
 <header>
-    <app-menu-bar></app-menu-bar>
+  <app-menu-bar></app-menu-bar>
 </header>
 <app-menu-title></app-menu-title>
 <div class="container-articles">
-    <div class="articles-main">
-        <app-big-card></app-big-card>
-    </div>
-    <div class="articles-others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-    </div>
+  <div class="articles-main">
+    <app-big-card photo="https://www.magazine-hd.com/apps/wp/wp-content/uploads/2022/09/iron-man-ea.jpg"
+      title="Novo homem de ferro anunciado" description="Marvel confima com trailers o novo filme do homem de ferro">
+    </app-big-card>
+  </div>
+  <div class="articles-others">
+    <app-small-card
+      photo="https://legadodamarvel.com.br/wp-content/uploads/2022/11/Anuncio-a-qualquer-momento-Homem-Aranha-4-ganha-novidades-na-Sony-legadodamarvel-1024x538.webp"
+      description="Novo filme do Homem aranha pode sair a qualquer momento">
+    </app-small-card>
+    <app-small-card
+      photo="https://sm.ign.com/ign_br/screenshot/default/dbs-volumen-19-manga-adb4_d8su.jpg"
+      description="Novo volume de Dragon Ball trás capa completamente icrivel">
+    </app-small-card>
+    <app-small-card
+      photo="https://legadodamarvel.com.br/wp-content/uploads/2022/11/Anuncio-a-qualquer-momento-Homem-Aranha-4-ganha-novidades-na-Sony-legadodamarvel-1024x538.webp"
+      description="Novo filme do Homem aranha pode sair a qualquer momento">
+    </app-small-card>
+  </div>
 </div>
