--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,24 +1,19 @@
 <div class="container-big-card">
     <div class="big-card-picture">
-        <!-- <img src="https://via.placeholder.com/1201x901" width="300" height="200"> -->
-        <img src="https://www.magazine-hd.com/apps/wp/wp-content/uploads/2022/09/iron-man-ea.jpg">
+        <img src="{{photo}}">
+        <!-- <img src="https://www.magazine-hd.com/apps/wp/wp-content/uploads/2022/09/iron-man-ea.jpg"> -->
     </div>
 
     <div class="big-card-name">
 
-        <h1><a href="#">Saiu nova versão do angular</a></h1>
+        <h1><a href="#">{{title}}</a></h1>
 
     </div>
     <div class="big-card-description">
 
         <p>
             <a href="#">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem maxime omnis iusto veniam quae
-                magni
-                quibusdam unde sequi, iure aut sit vitae, placeat libero. Corporis culpa illo ipsa accusantium eligendi!
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem maxime omnis iusto veniam quae
-                magni
-                quibusdam unde sequi, iure aut sit vitae, placeat
+                {{description}}
             </a>
         </p>
 
